--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
 <h2 id="intro">Intro</h2>
 <p>I&rsquo;m a Buddhist geek.</p>
 <p>I create dharma e-books using <a href="https://en.wikipedia.org/wiki/Markdown">markdown</a>/<a href="https://pandoc.org/">pandoc</a>/<a href="https://pandoc.org/">calibre</a> and I upload them on <a href="https://github.com/atrahhdis">my github page</a>.</p>
-<p>Below you will find a list with links to these files. You can download them in <strong>epub/mobi/azw3</strong> formats (and some of them in pdf) and read them on your e-book device.</p>
+<p>Below you will find a list with links to these files.</p>
+<p>You can download them in <strong>epub/mobi/azw3</strong> formats (and some of them in pdf) and read them on your e-book device.</p>
 <p> </p>
 <h2 id="mahasi-vipassana-noting-burmese-theravada">Mahasi Vipassana (Noting) (Burmese Theravada)</h2>
 <p>The following links are from a website I have created, <a href="https://mahasivipassana.com">mahasivipassana.com</a> (MVMR):</p>
