--- a/about/index.html
+++ b/about/index.html
@@ -153,13 +153,13 @@ If you found a typo or formatting issue or&hellip;. on an e-book, apart from sen
 </a>
 <nav><a href="/">Home</a>
 
-<a href="/e-book-how-to/">how-to</a>
+<a href="/e-book-how-to/">How-To</a>
 
-<a href="/dharma/">dharma</a>
+<a href="/dharma/">Dharma</a>
 
-<a href="/links/">links</a>
+<a href="/links/">Links</a>
 
-<a href="/about/">about</a>
+<a href="/about/">About</a>
 
 
 </nav>
