--- a/e-book-how-to/index.html
+++ b/e-book-how-to/index.html
@@ -157,13 +157,13 @@
 </a>
 <nav><a href="/">Home</a>
 
-<a href="/e-book-how-to/">how-to</a>
+<a href="/e-book-how-to/">How-To</a>
 
-<a href="/dharma/">dharma</a>
+<a href="/dharma/">Dharma</a>
 
-<a href="/links/">links</a>
+<a href="/links/">Links</a>
 
-<a href="/about/">about</a>
+<a href="/about/">About</a>
 
 
 </nav>
