--- a/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
@@ -153,13 +153,13 @@ Pragmatic Dharma, at its core, is about asking the question: What works? If some
 </a>
 <nav><a href="/">Home</a>
 
-<a href="/e-book-how-to/">how-to</a>
+<a href="/e-book-how-to/">How-To</a>
 
-<a href="/dharma/">dharma</a>
+<a href="/dharma/">Dharma</a>
 
-<a href="/links/">links</a>
+<a href="/links/">Links</a>
 
-<a href="/about/">about</a>
+<a href="/about/">About</a>
 
 
 </nav>
