--- a/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
@@ -149,13 +149,13 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
 </a>
 <nav><a href="/">Home</a>
 
-<a href="/e-book-how-to/">how-to</a>
+<a href="/e-book-how-to/">How-To</a>
 
-<a href="/dharma/">dharma</a>
+<a href="/dharma/">Dharma</a>
 
-<a href="/links/">links</a>
+<a href="/links/">Links</a>
 
-<a href="/about/">about</a>
+<a href="/about/">About</a>
 
 
 </nav>
