--- a/pragmatic-dharma/index.html
+++ b/pragmatic-dharma/index.html
@@ -185,7 +185,7 @@
 <p><a href="https://atrahhdis.github.io/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/">The Core Features of Pragmatic Dharma</a> by Vince Horn</p>
 </li>
 </ul>
-<p>In case you didn&rsquo;t notice it, there&rsquo;s a dedicated subsection with various Pragmatic Dharma texts on <a href="https://atrahhdis.github.io/#pd">the main page of this website</a>.</p>
+<p>In case you didn&rsquo;t notice it, there&rsquo;s a dedicated subsection with various Pragmatic Dharma texts on <a href="https://atrahhdis.github.io/">the main page of this website</a>.</p>
 <p> </p>
 <h2 id="what-about-the-mushroom-culture">What about the &ldquo;mushroom culture&rdquo;?</h2>
 <p>Here&rsquo;s a short story shared by Kenneth Folk via his twitter account:</p>
