--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
 <link rel="shortcut icon" href="https://atrahhdis.github.io/images/favicon.png" />
-<title>about | Яeversed Ƨiddharta</title>
+<title>about | Яeversed Ƨiddhartha</title>
 <meta name="title" content="about" />
 <meta name="description" content="Contact If you want to contact me, please send me an email at: ns |at| mahasivipassana |dot| com.
 If you found a typo or formatting issue or&hellip;. on an e-book, apart from sending me an email, you can create a github account, fork the relevant repository, apply any change you suggest and then push it back to me!
@@ -20,7 +20,7 @@ If you found a typo or formatting issue or&hellip;. on an e-book, apart from sen
  Website Software This website was created with hugo and hugo bear blog theme." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://atrahhdis.github.io/about/" />
-<meta property="og:site_name" content="Reversed Siddharta" />
+<meta property="og:site_name" content="Reversed Siddhartha" />
 
 
 
@@ -149,7 +149,7 @@ If you found a typo or formatting issue or&hellip;. on an e-book, apart from sen
 
 <body>
   <header><a href="/" class="title">
-  <h2>Яeversed Ƨiddharta</h2>
+  <h2>Яeversed Ƨiddhartha</h2>
 </a>
 <nav><a href="/">Home</a>
 
