--- a/dharma/index.html
+++ b/dharma/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
 <link rel="shortcut icon" href="https://atrahhdis.github.io/images/favicon.png" />
-<title>dharma | Яeversed Ƨiddharta</title>
+<title>dharma | Яeversed Ƨiddhartha</title>
 <meta name="title" content="dharma" />
 <meta name="description" content="Practice How do I start meditating? Months ago, I created a small set of meditation instructions in pdf, in order to help the beginners of a mediattion group I was a member of.
 Below you will find a link to a compressed file I shared with them. It includes some very basic instructions for:
@@ -22,7 +22,7 @@ Below you will find a link to a compressed file I shared with them. It includes 
   Mahasi Vipassana (Noting) (from this blog)" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://atrahhdis.github.io/dharma/" />
-<meta property="og:site_name" content="Reversed Siddharta" />
+<meta property="og:site_name" content="Reversed Siddhartha" />
 
 
 
@@ -153,7 +153,7 @@ Below you will find a link to a compressed file I shared with them. It includes 
 
 <body>
   <header><a href="/" class="title">
-  <h2>Яeversed Ƨiddharta</h2>
+  <h2>Яeversed Ƨiddhartha</h2>
 </a>
 <nav><a href="/">Home</a>
 
