--- a/e-book-how-to/index.html
+++ b/e-book-how-to/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
 <link rel="shortcut icon" href="https://atrahhdis.github.io/images/favicon.png" />
-<title>e-book creation how-to | Яeversed Ƨiddharta</title>
+<title>e-book creation how-to | Яeversed Ƨiddhartha</title>
 <meta name="title" content="e-book creation how-to" />
 <meta name="description" content="E-book Creation For the creation of all these e-books, the following procedure is followed:
   the text is pasted &amp; formatted with / written in / converted to markdown (the conversion is done using various methods) - in rare cases other formats, ie. html, are used
@@ -22,7 +22,7 @@
   the epub file is edited with calibre and finally&hellip;" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://atrahhdis.github.io/e-book-how-to/" />
-<meta property="og:site_name" content="Reversed Siddharta" />
+<meta property="og:site_name" content="Reversed Siddhartha" />
 
 
 
@@ -153,7 +153,7 @@
 
 <body>
   <header><a href="/" class="title">
-  <h2>Яeversed Ƨiddharta</h2>
+  <h2>Яeversed Ƨiddhartha</h2>
 </a>
 <nav><a href="/">Home</a>
 
