--- a/links/index.html
+++ b/links/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
 <link rel="shortcut icon" href="https://atrahhdis.github.io/images/favicon.png" />
-<title>useful links | Яeversed Ƨiddharta</title>
+<title>useful links | Яeversed Ƨiddhartha</title>
 <meta name="title" content="useful links" />
 <meta name="description" content="Useful Links  Teachers   Mahasi Sayadaw
   Sayadaw U Tejaniya
@@ -30,7 +30,7 @@
    Youtube  Doug&rsquo;s Dharma (an amazing secular/early Buddhism resource)   Podcasts   Deconstructing Yourself by Michael Taft" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://atrahhdis.github.io/links/" />
-<meta property="og:site_name" content="Reversed Siddharta" />
+<meta property="og:site_name" content="Reversed Siddhartha" />
 
 
 
@@ -169,7 +169,7 @@
 
 <body>
   <header><a href="/" class="title">
-  <h2>Яeversed Ƨiddharta</h2>
+  <h2>Яeversed Ƨiddhartha</h2>
 </a>
 <nav><a href="/">Home</a>
 
