--- a/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
 <link rel="shortcut icon" href="https://atrahhdis.github.io/images/favicon.png" />
-<title>The Core Features of Pragmatic Dharma | Яeversed Ƨiddharta</title>
+<title>The Core Features of Pragmatic Dharma | Яeversed Ƨiddhartha</title>
 <meta name="title" content="The Core Features of Pragmatic Dharma" />
 <meta name="description" content="This is an article written by Vince Horn
  Introduction Pragmatic Dharma is a contemporary approach to awakening, rooted in tradition. It pulls from the time-tested teachings and practices of the Buddhist tradition, but is simultaneously infused with a contemporary mindset that isn’t afraid to tinker with the traditional formulations.
@@ -20,7 +20,7 @@ Pragmatic Dharma, at its core, is about asking the question: What works? If some
 Pragmatic Dharma, at its core, is about asking the question: What works? If something doesn’t work, then it’s relinquished. If it works, it’s used." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://atrahhdis.github.io/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/" />
-<meta property="og:site_name" content="Reversed Siddharta" />
+<meta property="og:site_name" content="Reversed Siddhartha" />
 
 
 
@@ -149,7 +149,7 @@ Pragmatic Dharma, at its core, is about asking the question: What works? If some
 
 <body>
   <header><a href="/" class="title">
-  <h2>Яeversed Ƨiddharta</h2>
+  <h2>Яeversed Ƨiddhartha</h2>
 </a>
 <nav><a href="/">Home</a>
 
