--- a/pragmatic-dharma/index.html
+++ b/pragmatic-dharma/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
 <link rel="shortcut icon" href="https://atrahhdis.github.io/images/favicon.png" />
-<title>pragmatic dharma | Яeversed Ƨiddharta</title>
+<title>pragmatic dharma | Яeversed Ƨiddhartha</title>
 <meta name="title" content="pragmatic dharma" />
 <meta name="description" content="What is Pragmatic Dharma?   What is Pragmatic Dharma? by Ron Crouch
   The Core Features of Pragmatic Dharma by Vince Horn
@@ -24,7 +24,7 @@
  &hellip;..In fact, Bill (editors note: Hamilton) was himself an unabashed mushroomer, and not only withheld information but advocated doing so." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://atrahhdis.github.io/pragmatic-dharma/" />
-<meta property="og:site_name" content="Reversed Siddharta" />
+<meta property="og:site_name" content="Reversed Siddhartha" />
 
 
 
@@ -157,7 +157,7 @@
 
 <body>
   <header><a href="/" class="title">
-  <h2>Яeversed Ƨiddharta</h2>
+  <h2>Яeversed Ƨiddhartha</h2>
 </a>
 <nav><a href="/">Home</a>
 
