--- a/texts/index.html
+++ b/texts/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
 <link rel="shortcut icon" href="https://atrahhdis.github.io/images/favicon.png" />
-<title>Texts | Яeversed Ƨiddharta</title>
+<title>Texts | Яeversed Ƨiddhartha</title>
 <meta name="title" content="Texts" />
 <meta name="description" content="atrahhdis - a repository of dharma e-books" />
 <meta name="keywords" content="" />
@@ -16,7 +16,7 @@
 <meta property="og:description" content="atrahhdis - a repository of dharma e-books" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://atrahhdis.github.io/texts/" />
-<meta property="og:site_name" content="Reversed Siddharta" />
+<meta property="og:site_name" content="Reversed Siddhartha" />
 
 
 
@@ -31,7 +31,7 @@
 
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
-  <link rel="alternate" type="application/rss+xml" href="https://atrahhdis.github.io/texts/index.xml" title="Яeversed Ƨiddharta" />
+  <link rel="alternate" type="application/rss+xml" href="https://atrahhdis.github.io/texts/index.xml" title="Яeversed Ƨiddhartha" />
   <style>
   body {
     font-family: Verdana, sans-serif;
@@ -136,7 +136,7 @@
 
 <body>
   <header><a href="/" class="title">
-  <h2>Яeversed Ƨiddharta</h2>
+  <h2>Яeversed Ƨiddhartha</h2>
 </a>
 <nav><a href="/">Home</a>
 
