--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <link rel="shortcut icon" href="https://atrahhdis.github.io/images/favicon.png" />
 <title>welcome | Яeversed Ƨiddhartha</title>
 <meta name="title" content="welcome" />
-<meta name="description" content="atrahhdis - a repository of dharma e-books" />
+<meta name="description" content="ahtrahddis - a repository of dharma e-books" />
 <meta name="keywords" content="" />
 
 
 <meta property="og:title" content="welcome" />
-<meta property="og:description" content="atrahhdis - a repository of dharma e-books" />
+<meta property="og:description" content="ahtrahddis - a repository of dharma e-books" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://atrahhdis.github.io/" />
 <meta property="og:site_name" content="Reversed Siddhartha" />
@@ -23,12 +23,12 @@
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="welcome"/>
-<meta name="twitter:description" content="atrahhdis - a repository of dharma e-books"/>
+<meta name="twitter:description" content="ahtrahddis - a repository of dharma e-books"/>
 
 
 
 <meta itemprop="name" content="welcome">
-<meta itemprop="description" content="atrahhdis - a repository of dharma e-books">
+<meta itemprop="description" content="ahtrahddis - a repository of dharma e-books">
 
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
