--- a/texts/index.html
+++ b/texts/index.html
@@ -8,12 +8,12 @@
 <link rel="shortcut icon" href="https://atrahhdis.github.io/images/favicon.png" />
 <title>Texts | Яeversed Ƨiddhartha</title>
 <meta name="title" content="Texts" />
-<meta name="description" content="atrahhdis - a repository of dharma e-books" />
+<meta name="description" content="ahtrahddis - a repository of dharma e-books" />
 <meta name="keywords" content="" />
 
 
 <meta property="og:title" content="Texts" />
-<meta property="og:description" content="atrahhdis - a repository of dharma e-books" />
+<meta property="og:description" content="ahtrahddis - a repository of dharma e-books" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://atrahhdis.github.io/texts/" />
 <meta property="og:site_name" content="Reversed Siddhartha" />
@@ -22,12 +22,12 @@
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Texts"/>
-<meta name="twitter:description" content="atrahhdis - a repository of dharma e-books"/>
+<meta name="twitter:description" content="ahtrahddis - a repository of dharma e-books"/>
 
 
 
 <meta itemprop="name" content="Texts">
-<meta itemprop="description" content="atrahhdis - a repository of dharma e-books">
+<meta itemprop="description" content="ahtrahddis - a repository of dharma e-books">
 
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
