--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 <p> </p>
 <h2 id="intro">Intro</h2>
 <p>I&rsquo;m a Buddhist geek.</p>
-<p>I create dharma e-books using <a href="https://en.wikipedia.org/wiki/Markdown">markdown</a>/<a href="https://pandoc.org/">pandoc</a>/<a href="https://pandoc.org/">calibre</a> and I upload them on <a href="https://github.com/atrahhdis">my github page</a>.</p>
+<p>I create dharma e-books using <a href="https://en.wikipedia.org/wiki/Markdown">markdown</a>/<a href="https://pandoc.org/">pandoc</a>/<a href="https://pandoc.org/">calibre</a> and I upload them on <a href="https://github.com/ahtrahddis">my github page</a>.</p>
 <p>Below you will find a list with links to these files.</p>
 <p>You can download them in <strong>epub/mobi/azw3</strong> formats (and some of them in pdf) and read them on your e-book device.</p>
 <p> </p>
@@ -192,80 +192,80 @@
 <h2 id="sayadaw-u-tejaniyas-teachings-burmese-theravada">Sayadaw U Tejaniya&rsquo;s Teachings (Burmese Theravada)</h2>
 <ul>
 <li>
-<p><a href="https://github.com/atrahhdis/tejaniya/tree/master/Burmese%20Zen">Burmese Zen</a></p>
+<p><a href="https://github.com/ahtrahddis/tejaniya/tree/master/Burmese%20Zen">Burmese Zen</a></p>
 </li>
 <li>
-<p><a href="https://github.com/atrahhdis/tejaniya/tree/master/The%20Daily%20Tejaniya">The Daily Tejaniya - 2015</a></p>
+<p><a href="https://github.com/ahtrahddis/tejaniya/tree/master/The%20Daily%20Tejaniya">The Daily Tejaniya - 2015</a></p>
 </li>
 <li>
-<p><a href="https://github.com/atrahhdis/tejaniya/tree/master/Right%20Attitude">Right Attitude</a></p>
+<p><a href="https://github.com/ahtrahddis/tejaniya/tree/master/Right%20Attitude">Right Attitude</a></p>
 </li>
 </ul>
 <p> </p>
 <h2 id="pragmatic-dharma">Pragmatic Dharma</h2>
 <ul>
 <li>
-<p><a href="https://github.com/atrahhdis/alohadharma">Aloha Dharma: a compilation of texts from https://alohadharma.com</a> by Ron Crouch</p>
+<p><a href="https://github.com/ahtrahddis/alohadharma">Aloha Dharma: a compilation of texts from https://alohadharma.com</a> by Ron Crouch</p>
 </li>
 <li>
-<p><a href="https://github.com/atrahhdis/kf3st">The Three Speed Transmission: an unofficial collection of texts by Kenneth Folk</a></p>
+<p><a href="https://github.com/ahtrahddis/kf3st">The Three Speed Transmission: an unofficial collection of texts by Kenneth Folk</a></p>
 </li>
 <li>
-<p><a href="https://github.com/atrahhdis/pragmapoi">A Pragmatic Approach on the Stages of the Progress of Insight (Kenneth Folk &amp; Ron Crouch)</a></p>
+<p><a href="https://github.com/ahtrahddis/pragmapoi">A Pragmatic Approach on the Stages of the Progress of Insight (Kenneth Folk &amp; Ron Crouch)</a></p>
 </li>
 <li>
-<p><a href="https://github.com/atrahhdis/medinra">Meditation, Insight, and Rationality</a> by DavidM</p>
+<p><a href="https://github.com/ahtrahddis/medinra">Meditation, Insight, and Rationality</a> by DavidM</p>
 </li>
 <li>
-<p><a href="https://github.com/atrahhdis/ks3c">A non-mystical explanation of insight meditation and the three characteristics of existence</a> by Kaj Sotala <sup><span style="color: red;">new! (2020-09-30)</span></sup></p>
+<p><a href="https://github.com/ahtrahddis/ks3c">A non-mystical explanation of insight meditation and the three characteristics of existence</a> by Kaj Sotala <sup><span style="color: red;">new! (2020-09-30)</span></sup></p>
 </li>
 <li>
-<p><a href="https://github.com/atrahhdis/donothing/tree/master/various/do%20nothing%20%28Shinzen%20Young%29">Do Nothing Meditation</a> by Shinzen Young</p>
+<p><a href="https://github.com/ahtrahddis/donothing/tree/master/various/do%20nothing%20%28Shinzen%20Young%29">Do Nothing Meditation</a> by Shinzen Young</p>
 </li>
 <li>
-<p><a href="https://github.com/atrahhdis/self-inquiry/tree/master/The%20two-part%20formula%20by%20Kim%20Katami">The two-part formula</a> by Kim Katami</p>
+<p><a href="https://github.com/ahtrahddis/self-inquiry/tree/master/The%20two-part%20formula%20by%20Kim%20Katami">The two-part formula</a> by Kim Katami</p>
 </li>
 <li>
-<p><a href="https://github.com/atrahhdis/shargrol">A compilation of Shargrol&rsquo;s Posts at Dharmaoverground.org</a> (<strong>note:</strong> I just converted <a href="https://shargrolpostscompilation.blogspot.com/p/blog-page.html">Pepe&rsquo;s website</a> to e-book format)</p>
+<p><a href="https://github.com/ahtrahddis/shargrol">A compilation of Shargrol&rsquo;s Posts at Dharmaoverground.org</a> (<strong>note:</strong> I just converted <a href="https://shargrolpostscompilation.blogspot.com/p/blog-page.html">Pepe&rsquo;s website</a> to e-book format)</p>
 </li>
 <li>
-<p><a href="https://github.com/atrahhdis/cfitness">Contemplative Fitness</a> by Kenneth Folk (<strong>note:</strong> I just forked <a href="https://github.com/eudoxos/cfitness">eudoxos' repository</a> and pushed back some minor corrections)</p>
+<p><a href="https://github.com/ahtrahddis/cfitness">Contemplative Fitness</a> by Kenneth Folk (<strong>note:</strong> I just forked <a href="https://github.com/eudoxos/cfitness">eudoxos' repository</a> and pushed back some minor corrections)</p>
 </li>
 <li>
-<p><a href="https://github.com/atrahhdis/saints">Saints &amp; Psychopaths</a> by William (Bill) L. Hamilton (<strong>note:</strong> I just forked <a href="https://github.com/eudoxos/saints">eudoxos' repository</a> and pushed back some minor corrections)</p>
+<p><a href="https://github.com/ahtrahddis/saints">Saints &amp; Psychopaths</a> by William (Bill) L. Hamilton (<strong>note:</strong> I just forked <a href="https://github.com/eudoxos/saints">eudoxos' repository</a> and pushed back some minor corrections)</p>
 </li>
 </ul>
 <p> </p>
 <h2 id="soto-zen">Soto Zen</h2>
 <ul>
 <li>
-<p><a href="https://github.com/atrahhdis/nishijima">Handbook of Authentic Buddhism</a> by Nishijima</p>
+<p><a href="https://github.com/ahtrahddis/nishijima">Handbook of Authentic Buddhism</a> by Nishijima</p>
 </li>
 <li>
-<p><a href="https://github.com/atrahhdis/donothing/tree/master/various/zazen%20instruction">Zazen Instruction</a> by Shohaku Okumura</p>
+<p><a href="https://github.com/ahtrahddis/donothing/tree/master/various/zazen%20instruction">Zazen Instruction</a> by Shohaku Okumura</p>
 </li>
 <li>
-<p><a href="https://github.com/atrahhdis/sawaki">To You</a> by Kodo Sawaki</p>
+<p><a href="https://github.com/ahtrahddis/sawaki">To You</a> by Kodo Sawaki</p>
 </li>
 </ul>
 <p> </p>
 <h2 id="chan">Chan</h2>
 <ul>
-<li><a href="https://github.com/atrahhdis/donothing/tree/master/various/silent%20illumination">The Silent Illumination Method</a> by Sheng Yen</li>
+<li><a href="https://github.com/ahtrahddis/donothing/tree/master/various/silent%20illumination">The Silent Illumination Method</a> by Sheng Yen</li>
 </ul>
 <p> </p>
 <h2 id="various">Various</h2>
 <ul>
-<li><a href="https://github.com/atrahhdis/donothing">4 Ways to Do Nothing</a> (silent illumination/shikantaza/pristine mind/do nothing)</li>
+<li><a href="https://github.com/ahtrahddis/donothing">4 Ways to Do Nothing</a> (silent illumination/shikantaza/pristine mind/do nothing)</li>
 </ul>
 <p> </p>
 <h2 id="self-inquiry-advaita-vedanta">Self Inquiry (Advaita Vedanta)</h2>
 <ul>
 <li>
-<p><a href="https://github.com/atrahhdis/self-inquiry/tree/master/Who%20Am%20I%3F%20-%20A%20Translation%20and%20Commentary%20by%20David%20Godman">Who am I? (Ramana Maharshi) - A Translation and Commentary by David Godman</a></p>
+<p><a href="https://github.com/ahtrahddis/self-inquiry/tree/master/Who%20Am%20I%3F%20-%20A%20Translation%20and%20Commentary%20by%20David%20Godman">Who am I? (Ramana Maharshi) - A Translation and Commentary by David Godman</a></p>
 </li>
 <li>
-<p><a href="https://github.com/atrahhdis/self-inquiry/tree/master/The%20Ultimate%20Guide%20to%20Ramana%20Maharshi%27s%20Self-Inquiry">The Ultimate Guide to Ramana Maharshi&rsquo;s Self-Inquiry</a> by Akilesh Ayyar</p>
+<p><a href="https://github.com/ahtrahddis/self-inquiry/tree/master/The%20Ultimate%20Guide%20to%20Ramana%20Maharshi%27s%20Self-Inquiry">The Ultimate Guide to Ramana Maharshi&rsquo;s Self-Inquiry</a> by Akilesh Ayyar</p>
 </li>
 </ul>
 
