--- a/pragmatic-dharma/index.html
+++ b/pragmatic-dharma/index.html
@@ -204,16 +204,16 @@
 <p>This website has also <a href="https://atrahhdis.github.io/#pd">an e-book section</a>, dedicated to Pragmatic Dharma. There, among others you will find:</p>
 <ul>
 <li>
-<p><a href="https://github.com/atrahhdis/saints">Saints &amp; Psychopaths</a> by William (Bill) L. Hamilton</p>
+<p><a href="https://github.com/ahtrahddis/saints">Saints &amp; Psychopaths</a> by William (Bill) L. Hamilton</p>
 </li>
 <li>
-<p><a href="https://github.com/atrahhdis/cfitness">Contemplative Fitness</a> by <a href="https://kennethfolkdharma.com/">Kenneth Folk</a></p>
+<p><a href="https://github.com/ahrahddis/cfitness">Contemplative Fitness</a> by <a href="https://kennethfolkdharma.com/">Kenneth Folk</a></p>
 </li>
 <li>
-<p><a href="https://github.com/atrahhdis/kf3st">The Three Speed Transmission: an unofficial collection of texts by Kenneth Folk</a> by <a href="https://kennethfolkdharma.com/">Kenneth Folk</a></p>
+<p><a href="https://github.com/ahtrahddis/kf3st">The Three Speed Transmission: an unofficial collection of texts by Kenneth Folk</a> by <a href="https://kennethfolkdharma.com/">Kenneth Folk</a></p>
 </li>
 <li>
-<p><a href="https://github.com/atrahhdis/alohadharma">Aloha Dharma: a compilation of texts from https://alohadharma.com</a> by Ron Crouch</p>
+<p><a href="https://github.com/ahtrahddis/alohadharma">Aloha Dharma: a compilation of texts from https://alohadharma.com</a> by Ron Crouch</p>
 </li>
 </ul>
 <p> </p>
