updated base URL

--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
-<link rel="shortcut icon" href="https://atrahhdis.github.io/images/favicon.png" />
+<link rel="shortcut icon" href="https://ahtrahddis.github.io/images/favicon.png" />
 <title>about | Яeversed Ƨiddhartha</title>
 <meta name="title" content="about" />
 <meta name="description" content="Contact If you want to contact me, please send me an email at: ns |at| mahasivipassana |dot| com.
@@ -19,7 +19,7 @@ If you found a typo or formatting issue or&hellip;. on an e-book, apart from sen
 If you found a typo or formatting issue or&hellip;. on an e-book, apart from sending me an email, you can create a github account, fork the relevant repository, apply any change you suggest and then push it back to me!
  Website Software This website was created with hugo and hugo bear blog theme." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://atrahhdis.github.io/about/" />
+<meta property="og:url" content="https://ahtrahddis.github.io/about/" />
 <meta property="og:site_name" content="Reversed Siddhartha" />
 
 
