--- a/dharma/index.html
+++ b/dharma/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
-<link rel="shortcut icon" href="https://atrahhdis.github.io/images/favicon.png" />
+<link rel="shortcut icon" href="https://ahtrahddis.github.io/images/favicon.png" />
 <title>dharma | Яeversed Ƨiddhartha</title>
 <meta name="title" content="dharma" />
 <meta name="description" content="Practice How do I start meditating? Months ago, I created a small set of meditation instructions in pdf, in order to help the beginners of a mediattion group I was a member of.
@@ -21,7 +21,7 @@ Below you will find a link to a compressed file I shared with them. It includes 
   Mindfulness of Breath (from TMI)
   Mahasi Vipassana (Noting) (from this blog)" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://atrahhdis.github.io/dharma/" />
+<meta property="og:url" content="https://ahtrahddis.github.io/dharma/" />
 <meta property="og:site_name" content="Reversed Siddhartha" />
 
 
@@ -235,8 +235,8 @@ Below you will find a link to a compressed file I shared with them. It includes 
 <p>If you are interested in all-day practice, you might want to check <a href="https://ashintejaniya.org/">Sayadaw U Tejaniya</a> and <a href="https://ashintejaniya.org/teachings">his teachings</a>.</p>
 <p> </p>
 <h2 id="pragmatic-dharma">Pragmatic Dharma</h2>
-<p>For more information about Pragmatic Dharma, please visit <a href="https://atrahhdis.github.io/pragmatic-dharma/">this link</a>.</p>
-<p> </p>
+<p>For more information about Pragmatic Dharma, please visit <a href="https://ahtrahddis.github.io/pragmatic-dharma/">this link</a>
+ </p>
 <h2 id="note">Note</h2>
 <p>On the above sections, I referred to other people as &ldquo;beginners&rdquo;. Please note that I&rsquo;m not an expert: I&rsquo;m a beginner too and I just try to assist fellow meditators that know less than I do.</p>
 
