--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
-<link rel="shortcut icon" href="https://atrahhdis.github.io/images/favicon.png" />
+<link rel="shortcut icon" href="https://ahtrahddis.github.io/images/favicon.png" />
 <title>welcome | Яeversed Ƨiddhartha</title>
 <meta name="title" content="welcome" />
 <meta name="description" content="ahtrahddis - a repository of dharma e-books" />
@@ -16,7 +16,7 @@
 <meta property="og:title" content="welcome" />
 <meta property="og:description" content="ahtrahddis - a repository of dharma e-books" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://atrahhdis.github.io/" />
+<meta property="og:url" content="https://ahtrahddis.github.io/" />
 <meta property="og:site_name" content="Reversed Siddhartha" />
 
 
@@ -32,7 +32,7 @@
 
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
-  <link rel="alternate" type="application/rss+xml" href="https://atrahhdis.github.io/index.xml" title="Яeversed Ƨiddhartha" />
+  <link rel="alternate" type="application/rss+xml" href="https://ahtrahddis.github.io/index.xml" title="Яeversed Ƨiddhartha" />
   <style>
   body {
     font-family: Verdana, sans-serif;
