--- a/links/index.html
+++ b/links/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
-<link rel="shortcut icon" href="https://atrahhdis.github.io/images/favicon.png" />
+<link rel="shortcut icon" href="https://ahtrahddis.github.io/images/favicon.png" />
 <title>useful links | Яeversed Ƨiddhartha</title>
 <meta name="title" content="useful links" />
 <meta name="description" content="Useful Links  Teachers   Mahasi Sayadaw
@@ -29,7 +29,7 @@
   Contemplative Fitness by Kenneth Folk
    Youtube  Doug&rsquo;s Dharma (an amazing secular/early Buddhism resource)   Podcasts   Deconstructing Yourself by Michael Taft" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://atrahhdis.github.io/links/" />
+<meta property="og:url" content="https://ahtrahddis.github.io/links/" />
 <meta property="og:site_name" content="Reversed Siddhartha" />
 
 
