--- a/pragmatic-dharma/index.html
+++ b/pragmatic-dharma/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
-<link rel="shortcut icon" href="https://atrahhdis.github.io/images/favicon.png" />
+<link rel="shortcut icon" href="https://ahtrahddis.github.io/images/favicon.png" />
 <title>pragmatic dharma | Яeversed Ƨiddhartha</title>
 <meta name="title" content="pragmatic dharma" />
 <meta name="description" content="What is Pragmatic Dharma?   What is Pragmatic Dharma? by Ron Crouch
@@ -23,7 +23,7 @@
  What about the &ldquo;mushroom culture&rdquo;? Here&rsquo;s a short story shared by Kenneth Folk via his twitter account:
  &hellip;..In fact, Bill (editors note: Hamilton) was himself an unabashed mushroomer, and not only withheld information but advocated doing so." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://atrahhdis.github.io/pragmatic-dharma/" />
+<meta property="og:url" content="https://ahtrahddis.github.io/pragmatic-dharma/" />
 <meta property="og:site_name" content="Reversed Siddhartha" />
 
 
@@ -179,13 +179,13 @@
 <h2 id="what-is-pragmatic-dharma">What is Pragmatic Dharma?</h2>
 <ul>
 <li>
-<p><a href="https://atrahhdis.github.io/texts/pragmatic-dharma/what-is-pragmatic-dharma/">What is Pragmatic Dharma?</a> by Ron Crouch</p>
+<p><a href="https://ahtrahddis.github.io/texts/pragmatic-dharma/what-is-pragmatic-dharma/">What is Pragmatic Dharma?</a> by Ron Crouch</p>
 </li>
 <li>
-<p><a href="https://atrahhdis.github.io/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/">The Core Features of Pragmatic Dharma</a> by Vince Horn</p>
+<p><a href="https://ahtrahddis.github.io/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/">The Core Features of Pragmatic Dharma</a> by Vince Horn</p>
 </li>
 </ul>
-<p>In case you didn&rsquo;t notice it, there&rsquo;s a dedicated subsection with various Pragmatic Dharma texts on <a href="https://atrahhdis.github.io/">the main page of this website</a>.</p>
+<p>In case you didn&rsquo;t notice it, there&rsquo;s a dedicated subsection with various Pragmatic Dharma texts on <a href="https://ahtrahddis.github.io/">the main page of this website</a>.</p>
 <p> </p>
 <h2 id="what-about-the-mushroom-culture">What about the &ldquo;mushroom culture&rdquo;?</h2>
 <p>Here&rsquo;s a short story shared by Kenneth Folk via his twitter account:</p>
