--- a/texts/index.html
+++ b/texts/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
-<link rel="shortcut icon" href="https://atrahhdis.github.io/images/favicon.png" />
+<link rel="shortcut icon" href="https://ahtrahddis.github.io/images/favicon.png" />
 <title>Texts | Яeversed Ƨiddhartha</title>
 <meta name="title" content="Texts" />
 <meta name="description" content="ahtrahddis - a repository of dharma e-books" />
@@ -15,7 +15,7 @@
 <meta property="og:title" content="Texts" />
 <meta property="og:description" content="ahtrahddis - a repository of dharma e-books" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://atrahhdis.github.io/texts/" />
+<meta property="og:url" content="https://ahtrahddis.github.io/texts/" />
 <meta property="og:site_name" content="Reversed Siddhartha" />
 
 
@@ -31,7 +31,7 @@
 
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
-  <link rel="alternate" type="application/rss+xml" href="https://atrahhdis.github.io/texts/index.xml" title="Яeversed Ƨiddhartha" />
+  <link rel="alternate" type="application/rss+xml" href="https://ahtrahddis.github.io/texts/index.xml" title="Яeversed Ƨiddhartha" />
   <style>
   body {
     font-family: Verdana, sans-serif;
@@ -183,7 +183,7 @@
           </time>
         </i>
       </span>
-      <a href="https://atrahhdis.github.io/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/">The Core Features of Pragmatic Dharma</a>
+      <a href="https://ahtrahddis.github.io/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/">The Core Features of Pragmatic Dharma</a>
     </li>
     
     <li>
@@ -194,7 +194,7 @@
           </time>
         </i>
       </span>
-      <a href="https://atrahhdis.github.io/texts/pragmatic-dharma/what-is-pragmatic-dharma/">What is Pragmatic Dharma?</a>
+      <a href="https://ahtrahddis.github.io/texts/pragmatic-dharma/what-is-pragmatic-dharma/">What is Pragmatic Dharma?</a>
     </li>
     
   </ul>
