--- a/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
-<link rel="shortcut icon" href="https://atrahhdis.github.io/images/favicon.png" />
+<link rel="shortcut icon" href="https://ahtrahddis.github.io/images/favicon.png" />
 <title>What is Pragmatic Dharma? | Яeversed Ƨiddhartha</title>
 <meta name="title" content="What is Pragmatic Dharma?" />
 <meta name="description" content="This is an article written by Ron Crouch
@@ -17,7 +17,7 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
 <meta property="og:description" content="This is an article written by Ron Crouch
 I’ve been thinking a lot about what “pragmatic dharma” is lately. This is partly because I’m trying to get my own head straight as I write about it, and partly because Jack Kornfield recently criticized it on Buddhist Geeks. Kornfield, in his usual gentle style, was mostly circumspect in his criticism, but he did say that the leaders of the pragmatic dharma movement (I’m assuming he means Kenneth Folk and Daniel Ingram) have redefined key concepts in Buddhism." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://atrahhdis.github.io/texts/pragmatic-dharma/what-is-pragmatic-dharma/" />
+<meta property="og:url" content="https://ahtrahddis.github.io/texts/pragmatic-dharma/what-is-pragmatic-dharma/" />
 <meta property="og:site_name" content="Reversed Siddhartha" />
 
 
