--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
-<link rel="shortcut icon" href="https://atrahhdis.github.io/images/favicon.png" />
+<link rel="shortcut icon" href="https://ahtrahddis.github.io/images/favicon.png" />
 <title>404</title>
 <meta name="title" content="404 Page not found" />
 <meta name="description" content="ahtrahddis - a repository of dharma e-books" />
@@ -15,7 +15,7 @@
 <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="ahtrahddis - a repository of dharma e-books" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://atrahhdis.github.io/404.html" />
+<meta property="og:url" content="https://ahtrahddis.github.io/404.html" />
 <meta property="og:site_name" content="Reversed Siddhartha" />
 
 
