--- a/e-book-how-to/index.html
+++ b/e-book-how-to/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
-<link rel="shortcut icon" href="https://atrahhdis.github.io/images/favicon.png" />
+<link rel="shortcut icon" href="https://ahtrahddis.github.io/images/favicon.png" />
 <title>e-book creation how-to | Яeversed Ƨiddhartha</title>
 <meta name="title" content="e-book creation how-to" />
 <meta name="description" content="E-book Creation For the creation of all these e-books, the following procedure is followed:
@@ -21,7 +21,7 @@
   the markdown (.md) file is converted to epub using pandoc
   the epub file is edited with calibre and finally&hellip;" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://atrahhdis.github.io/e-book-how-to/" />
+<meta property="og:url" content="https://ahtrahddis.github.io/e-book-how-to/" />
 <meta property="og:site_name" content="Reversed Siddhartha" />
 
 
