--- a/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
-<link rel="shortcut icon" href="https://atrahhdis.github.io/images/favicon.png" />
+<link rel="shortcut icon" href="https://ahtrahddis.github.io/images/favicon.png" />
 <title>The Core Features of Pragmatic Dharma | Яeversed Ƨiddhartha</title>
 <meta name="title" content="The Core Features of Pragmatic Dharma" />
 <meta name="description" content="This is an article written by Vince Horn
@@ -19,7 +19,7 @@ Pragmatic Dharma, at its core, is about asking the question: What works? If some
  Introduction Pragmatic Dharma is a contemporary approach to awakening, rooted in tradition. It pulls from the time-tested teachings and practices of the Buddhist tradition, but is simultaneously infused with a contemporary mindset that isn’t afraid to tinker with the traditional formulations.
 Pragmatic Dharma, at its core, is about asking the question: What works? If something doesn’t work, then it’s relinquished. If it works, it’s used." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://atrahhdis.github.io/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/" />
+<meta property="og:url" content="https://ahtrahddis.github.io/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/" />
 <meta property="og:site_name" content="Reversed Siddhartha" />
 
 
