--- a/dharma/index.html
+++ b/dharma/index.html
@@ -235,7 +235,7 @@ Below you will find a link to a compressed file I shared with them. It includes 
 <p>If you are interested in all-day practice, you might want to check <a href="https://ashintejaniya.org/">Sayadaw U Tejaniya</a> and <a href="https://ashintejaniya.org/teachings">his teachings</a>.</p>
 <p> </p>
 <h2 id="pragmatic-dharma">Pragmatic Dharma</h2>
-<p>For more information about Pragmatic Dharma, please visit <a href="https://ahtrahddis.github.io/pragmatic-dharma/">this link</a>
+<p>For more information about Pragmatic Dharma, please visit <a href="https://ahtrahddis.github.io/pragmatic-dharma/">this link</a>.
  </p>
 <h2 id="note">Note</h2>
 <p>On the above sections, I referred to other people as &ldquo;beginners&rdquo;. Please note that I&rsquo;m not an expert: I&rsquo;m a beginner too and I just try to assist fellow meditators that know less than I do.</p>
