addedd authors' urls

--- a/about/index.html
+++ b/about/index.html
@@ -9,14 +9,14 @@
 <title>about | Яeversed Ƨiddhartha</title>
 <meta name="title" content="about" />
 <meta name="description" content="Contact If you want to contact me, please send me an email at: ns |at| mahasivipassana |dot| com.
-If you found a typo or formatting issue or&hellip;. on an e-book, apart from sending me an email, you can create a github account, fork the relevant repository, apply any change you suggest and then push it back to me!
+If you found a typo or formatting issue or&hellip;. on an e-book, apart from sending me an email, you can create a github account, fork the relevant repository, apply any change you suggest and then push it back to me.
  Website Software This website was created with hugo and hugo bear blog theme." />
 <meta name="keywords" content="" />
 
 
 <meta property="og:title" content="about" />
 <meta property="og:description" content="Contact If you want to contact me, please send me an email at: ns |at| mahasivipassana |dot| com.
-If you found a typo or formatting issue or&hellip;. on an e-book, apart from sending me an email, you can create a github account, fork the relevant repository, apply any change you suggest and then push it back to me!
+If you found a typo or formatting issue or&hellip;. on an e-book, apart from sending me an email, you can create a github account, fork the relevant repository, apply any change you suggest and then push it back to me.
  Website Software This website was created with hugo and hugo bear blog theme." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/about/" />
@@ -27,14 +27,14 @@ If you found a typo or formatting issue or&hellip;. on an e-book, apart from sen
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="about"/>
 <meta name="twitter:description" content="Contact If you want to contact me, please send me an email at: ns |at| mahasivipassana |dot| com.
-If you found a typo or formatting issue or&hellip;. on an e-book, apart from sending me an email, you can create a github account, fork the relevant repository, apply any change you suggest and then push it back to me!
+If you found a typo or formatting issue or&hellip;. on an e-book, apart from sending me an email, you can create a github account, fork the relevant repository, apply any change you suggest and then push it back to me.
  Website Software This website was created with hugo and hugo bear blog theme."/>
 
 
 
 <meta itemprop="name" content="about">
 <meta itemprop="description" content="Contact If you want to contact me, please send me an email at: ns |at| mahasivipassana |dot| com.
-If you found a typo or formatting issue or&hellip;. on an e-book, apart from sending me an email, you can create a github account, fork the relevant repository, apply any change you suggest and then push it back to me!
+If you found a typo or formatting issue or&hellip;. on an e-book, apart from sending me an email, you can create a github account, fork the relevant repository, apply any change you suggest and then push it back to me.
  Website Software This website was created with hugo and hugo bear blog theme.">
 
 <meta itemprop="wordCount" content="71">
@@ -170,7 +170,7 @@ If you found a typo or formatting issue or&hellip;. on an e-book, apart from sen
   <p> </p>
 <h2 id="contact">Contact</h2>
 <p>If you want to contact me, please send me an email at: ns |at| mahasivipassana |dot| com.</p>
-<p>If you found a typo or formatting issue or&hellip;. on an e-book, apart from sending me an email, you can create a github account, fork the relevant repository, apply any change you suggest and then push it back to me!</p>
+<p>If you found a typo or formatting issue or&hellip;. on an e-book, apart from sending me an email, you can create a github account, fork the relevant repository, apply any change you suggest and then push it back to me.</p>
 <p> </p>
 <h2 id="website-software">Website Software</h2>
 <p>This website was created with <a href="https://gohugo.io/">hugo</a> and  <a href="https://github.com/janraasch/hugo-bearblog">hugo bear blog</a> theme.</p>
