--- a/index.html
+++ b/index.html
@@ -214,22 +214,22 @@
 <p><a href="https://github.com/ahtrahddis/pragmapoi">A Pragmatic Approach on the Stages of the Progress of Insight (Kenneth Folk &amp; Ron Crouch)</a></p>
 </li>
 <li>
-<p><a href="https://github.com/ahtrahddis/medinra">Meditation, Insight, and Rationality</a> by DavidM</p>
+<p><a href="https://github.com/ahtrahddis/medinra">Meditation, Insight, and Rationality</a> by <a href="https://www.lesswrong.com/users/davidm">DavidM</a></p>
 </li>
 <li>
-<p><a href="https://github.com/ahtrahddis/ks3c">A non-mystical explanation of insight meditation and the three characteristics of existence</a> by Kaj Sotala <sup><span style="color: red;">new! (2020-09-30)</span></sup></p>
+<p><a href="https://github.com/ahtrahddis/ks3c">A non-mystical explanation of insight meditation and the three characteristics of existence</a> by <a href="https://kajsotala.fi/">Kaj Sotala</a> <sup><span style="color: red;">new! (2020-09-30)</span></sup></p>
 </li>
 <li>
-<p><a href="https://github.com/ahtrahddis/donothing/tree/master/various/do%20nothing%20%28Shinzen%20Young%29">Do Nothing Meditation</a> by Shinzen Young</p>
+<p><a href="https://github.com/ahtrahddis/donothing/tree/master/various/do%20nothing%20%28Shinzen%20Young%29">Do Nothing Meditation</a> by <a href="https://www.shinzen.org">Shinzen Young</a></p>
 </li>
 <li>
-<p><a href="https://github.com/ahtrahddis/self-inquiry/tree/master/The%20two-part%20formula%20by%20Kim%20Katami">The two-part formula</a> by Kim Katami</p>
+<p><a href="https://github.com/ahtrahddis/self-inquiry/tree/master/The%20two-part%20formula%20by%20Kim%20Katami">The two-part formula</a> by <a href="https://www.pemakobuddhism.com/33">Kim Katami</a></p>
 </li>
 <li>
 <p><a href="https://github.com/ahtrahddis/shargrol">A compilation of Shargrol&rsquo;s Posts at Dharmaoverground.org</a> (<strong>note:</strong> I just converted <a href="https://shargrolpostscompilation.blogspot.com/p/blog-page.html">Pepe&rsquo;s website</a> to e-book format)</p>
 </li>
 <li>
-<p><a href="https://github.com/ahtrahddis/cfitness">Contemplative Fitness</a> by Kenneth Folk (<strong>note:</strong> I just forked <a href="https://github.com/eudoxos/cfitness">eudoxos' repository</a> and pushed back some minor corrections)</p>
+<p><a href="https://github.com/ahtrahddis/cfitness">Contemplative Fitness</a> by <a href="https://kennethfolkdharma.com/">Kenneth Folk</a> (<strong>note:</strong> I just forked <a href="https://github.com/eudoxos/cfitness">eudoxos' repository</a> and pushed back some minor corrections)</p>
 </li>
 <li>
 <p><a href="https://github.com/ahtrahddis/saints">Saints &amp; Psychopaths</a> by William (Bill) L. Hamilton (<strong>note:</strong> I just forked <a href="https://github.com/eudoxos/saints">eudoxos' repository</a> and pushed back some minor corrections)</p>
@@ -239,19 +239,19 @@
 <h2 id="soto-zen">Soto Zen</h2>
 <ul>
 <li>
-<p><a href="https://github.com/ahtrahddis/nishijima">Handbook of Authentic Buddhism</a> by Nishijima</p>
+<p><a href="https://github.com/ahtrahddis/nishijima">Handbook of Authentic Buddhism</a> by <a href="https://www.shobogenzo.net/">Nishijima</a></p>
 </li>
 <li>
-<p><a href="https://github.com/ahtrahddis/donothing/tree/master/various/zazen%20instruction">Zazen Instruction</a> by Shohaku Okumura</p>
+<p><a href="https://github.com/ahtrahddis/donothing/tree/master/various/zazen%20instruction">Zazen Instruction</a> by <a href="https://dogeninstitute.wordpress.com/about/shohaku-okumura-roshi/">Shohaku Okumura</a></p>
 </li>
 <li>
-<p><a href="https://github.com/ahtrahddis/sawaki">To You</a> by Kodo Sawaki</p>
+<p><a href="https://github.com/ahtrahddis/sawaki">To You</a> by <a href="https://antaiji.org/archives/eng/sawaki-uchiyama.shtml">Kodo Sawaki</a></p>
 </li>
 </ul>
 <p> </p>
 <h2 id="chan">Chan</h2>
 <ul>
-<li><a href="https://github.com/ahtrahddis/donothing/tree/master/various/silent%20illumination">The Silent Illumination Method</a> by Sheng Yen</li>
+<li><a href="https://github.com/ahtrahddis/donothing/tree/master/various/silent%20illumination">The Silent Illumination Method</a> by <a href="http://www.shengyen.org/eng">Sheng Yen</a></li>
 </ul>
 <p> </p>
 <h2 id="various">Various</h2>
@@ -265,7 +265,7 @@
 <p><a href="https://github.com/ahtrahddis/self-inquiry/tree/master/Who%20Am%20I%3F%20-%20A%20Translation%20and%20Commentary%20by%20David%20Godman">Who am I? (Ramana Maharshi) - A Translation and Commentary by David Godman</a></p>
 </li>
 <li>
-<p><a href="https://github.com/ahtrahddis/self-inquiry/tree/master/The%20Ultimate%20Guide%20to%20Ramana%20Maharshi%27s%20Self-Inquiry">The Ultimate Guide to Ramana Maharshi&rsquo;s Self-Inquiry</a> by Akilesh Ayyar</p>
+<p><a href="https://github.com/ahtrahddis/self-inquiry/tree/master/The%20Ultimate%20Guide%20to%20Ramana%20Maharshi%27s%20Self-Inquiry">The Ultimate Guide to Ramana Maharshi&rsquo;s Self-Inquiry</a> by <a href="https://www.siftingtothetruth.com/">Akilesh Ayyar</a></p>
 </li>
 </ul>
 
